clarify native deps